* Wedge will now only show the meta charset on topic pages. The idea behind this is that the UTF8 format is already specified through the headers, and the only reason we'd want to have the charset specified in the HTML is if the page is going to be saved for offline browsing. It's unlikely to happen for anything that's not a topic page... (index.template.php) * Search icon was off by a pixel. (Warm/index.css, Wuthering/index.css) ! Fixed on_timeformat() and on_date() to work on English strings (the new time format broke it). on_date() is currently not used in Wedge, so I might remove it in the future. (Subs.php)

--- a/Themes/default/skins/Warm/index.css
+++ b/Themes/default/skins/Warm/index.css
@@ -138,7 +138,7 @@ dl#feed
 		background-color: rgba(0,0,0, .075)
 		background-position: 98% 2px
 		li.chosen &
-			background-position: 98% -28px
+			background-position: 98% -27px
 		a
 			color: #000
 	li.chosen h4
