--- a/Themes/default/skins/Wuthering/index.css
+++ b/Themes/default/skins/Wuthering/index.css
@@ -150,9 +150,9 @@ a, #linktree a
 		color: #000
 	h4:hover, h4.hove
 		background-color: rgba(0,0,0, .075)
-		background-position: 98% 2px
+		background-position: 98% 3px
 		li.chosen &
-			background-position: 98% -28px
+			background-position: 98% -27px
 		a
 			color: #000
 	li.chosen h4
